@@ -45,6 +45,9 @@ by the agent may be different. This was done in order to improve the integration
 * Add support for Spring AMQP batch API - {pull}1716[#1716]
 * Add the (current) transaction name to the error (when using APM Server 8.0) - {pull}2235[#2235]
 * The JVM/JMX metrics are reported for each service name individually (when using APM Server 8.0) - {pull}2233[#2233]
+* Added <<config-span-stack-trace-min-duration,`span_stack_trace_min_duration`>> option.
+ This replaces the now deprecated `span_frames_min_duration` option.
+ The difference is that the new option has more intuitive semantics for negative values (never collect stack trace) and zero (always collect stack trace). - {pull}2220[#2220]
 
 [float]
 ===== Performance improvements
